--- a/src/app/posts/13.md
+++ b/src/app/posts/13.md
@@ -239,15 +239,15 @@ uma hipótese de determinação de limites ao exercício dos direitos.
 
 9 -- Em rigor, e uma vez que no caso *sub judicio* a Ré só havia feito
 finca-pé em relação ao envio de informação relativa a trabalhadores não
-sindicalizados, a truncagem do Relatório Único mediante [o envio da
+sindicalizados, a truncagem do Relatório Único mediante o envio da
 informação exclusivamente atinente aos trabalhadores
-sindicalizados]{.mark}, com o argumento de que em relação a estes o
+sindicalizados, com o argumento de que em relação a estes o
 Sindicato já possui o respetivo consentimento (sendo aliás a partir da
 remuneração correspondente que se opera o desconto da quotização
-sindical), [não só esvaziaria de sentido a obrigação de envio do
+sindical), não só esvaziaria de sentido a obrigação de envio do
 Relatório Único, como também desconsidera(ri)a a possibilidade de na
 mesma empresa existirem trabalhadores com filiação em sindicatos
-diferentes]{.mark}.
+diferentes.
 
 Essa pluralidade de filiação, retirando dimensão ao argumento de que a
 com a filiação no sindicato os trabalhadores dão o seu consentimento
@@ -409,11 +409,11 @@ associações sindicais justificam *de pleno* a disponibilização do
 Relatório Único sem qualquer truncagem a partir da filiação sindical dos
 trabalhadores.
 
-Eis porque, na nossa leitura, [andou bem o Tribunal da Relação do Porto
+Eis porque, na nossa leitura, andou bem o Tribunal da Relação do Porto
 ao considerar legítima a pretensão do sindicato de que a empresa onde
 trabalham trabalhadores nele sindicalizados lhe forneça o Relatório
 Único anual, com todos os seus anexos, expurgado de elementos
-nominativos, excluindo o sexo.]{.mark}
+nominativos, excluindo o sexo.
 
 [^1]: Se por «dados pessoais» se entende toda a informação relativa a
     uma pessoa singular identificada ou identificável («titular dos
