--- a/src/app/posts/202.md
+++ b/src/app/posts/202.md
@@ -66,10 +66,10 @@ ativa e dar resposta à escassez de trabalhadores num número crescente de
 atividades económicas. Como mostra o relatório de 2024 "[Future
 migration scenarios for
 Europe](https://futuremigration.eu/fume-publications/migration-scenarios-and-their-demographic-impacts-for-the-eu-member-states/)",
-[sem imigração internacional para os países da União Europeia, desde
+sem imigração internacional para os países da União Europeia, desde
 2011 que os países europeus estariam em quebras de população, resultante
 da baixa fertilidade e do aumento da esperança média de vida, com o
-envelhecimento acentuado da população ativa europeia]{.mark}. Embora
+envelhecimento acentuado da população ativa europeia. Embora
 seja improvável esperar que as migrações possam parar o envelhecimento
 ou o declínio das populações europeias, o debate neste âmbito tem sido
 consensual em reconhecer que a imigração, embora não forneça por si só a
@@ -85,9 +85,9 @@ generalidade dos países europeus terem atingido em 2024 o pico da sua
 população, com um decréscimo da sua fertilidade, o que induz a que a
 janela de oportunidade para acelerar o crescimento económico, dependente
 de um maior peso de população em idade ativa e fértil, é já bastante
-limitada. Ora identificando-se que [a imigração é o principal fator de
+limitada. Ora identificando-se que a imigração é o principal fator de
 crescimento da população em idade ativa e fértil nos países mais
-envelhecidos do mundo (onde se destaca Portugal)]{.mark}, o relatório
+envelhecidos do mundo (onde se destaca Portugal), o relatório
 das Nações Unidas conclui que será mais eficaz retardar os efeitos do
 declínio da população com políticas de incentivo à imigração laboral, de
 retenção e de retorno da emigração, com criação de melhores
@@ -111,10 +111,10 @@ históricos ([Peixoto et al.,
 
 Acompanhando o cenário de país cada vez mais envelhecido da Europa e do
 mundo, nas últimas quatro décadas a imigração para Portugal teve
-predominantemente motivação laboral. [Os trabalhadores estrangeiros,
+predominantemente motivação laboral. Os trabalhadores estrangeiros,
 dando resposta às necessidades do mercado de trabalho português, foram
 sendo segmentados para as atividades e setores económicos mais exigentes
-e menos atrativos para os trabalhadores nacionais]{.mark} (e.g.
+e menos atrativos para os trabalhadores nacionais (e.g.
 construção, agricultura, pesca, restauração e hotelaria), em particular
 nos grupos profissionais menos qualificados, mais precários, mais
 expostos a instabilidade na relação laboral, com menores remunerações, e
@@ -178,12 +178,12 @@ trabalhadores estrangeiros em Portugal ([Oliveira,
 
 Também nos vínculos laborais se identificam discrepâncias entre
 trabalhadores nacionais e estrangeiros: os dados dos Quadros de Pessoal
-para 2022 mostram que [a maioria dos trabalhadores estrangeiros tem
+para 2022 mostram que a maioria dos trabalhadores estrangeiros tem
 contratos de trabalho a termo certo (36%), a termo incerto (18%) ou
 temporários (8%) e têm menor proporção nos vínculos laborais permanentes
 por comparação aos trabalhadores portugueses (estrangeiros com 37% de
 contratos de trabalho sem termo, representando -34pp que os
-trabalhadores portugueses)]{.mark}. Os dados dos Quadros de Pessoal
+trabalhadores portugueses). Os dados dos Quadros de Pessoal
 documentam também que, por comparação aos trabalhadores portugueses, os
 trabalhadores estrangeiros mostram uma duração média mensal do período
 de trabalho superior e tendem a fazer maior número de horas extra de
@@ -204,11 +204,11 @@ em 2023 um dos saldos mais elevados de +2.330,6 milhões de euros
 trabalhadores estrangeiros para a segurança social (+2.683,5 milhões de
 euros em 2023) e os gastos do sistema com prestações sociais de
 contribuintes estrangeiros (-352,95 milhões em 2023). Este saldo reflete
-que [os estrangeiros mantêm mais contribuintes para o sistema por total
+que os estrangeiros mantêm mais contribuintes para o sistema por total
 de residentes que o total da população: no caso dos estrangeiros a
 relação era de 84 contribuintes por cada 100 residentes em 2023, quando
 para o total da população o rácio era de 49 contribuintes por cada 100
-residentes]{.mark}. Adicionalmente, observa-se que os estrangeiros
+residentes. Adicionalmente, observa-se que os estrangeiros
 continuam a beneficiar menos de prestações sociais por total de
 contribuintes: nos estrangeiros o rácio foi de 28 beneficiários por cada
 100 contribuintes em 2023, enquanto nos portugueses o rácio foi de 54
@@ -282,9 +282,9 @@ envelhecimento demográfico e ao reforço da procura por trabalhadores
 para atividades especificas, identifica-se que são os trabalhadores
 imigrantes que dão cada vez mais resposta às necessidades das economias
 europeias. Não sendo Portugal exceção neste domínio, e assumindo-se como
-o segundo país europeu mais envelhecido, [a integração laboral de
+o segundo país europeu mais envelhecido, a integração laboral de
 trabalhadores imigrantes surge como um dos fatores essenciais para a
-eficiência do mercado de trabalho]{.mark}, sustentando a atividade de
+eficiência do mercado de trabalho, sustentando a atividade de
 alguns setores e algum do equilíbrio económico e social do país. Não
 obstante, os trabalhadores estrangeiros continuam a enfrentar barreiras
 e desafios que condicionam o seu potencial e a sua plena integração no
@@ -323,11 +323,11 @@ para estrangeiros, por profissões e atividades económicas com carência
 de trabalhadores, a partir de relatórios bianuais produzidos pelo
 Instituto de Emprego e Formação Profissional (IEFP) e disseminados via
 rede consular portuguesa para enquadrar a emissão de títulos para
-migração laboral legal para Portugal. [Como avaliou a [OCDE
+migração laboral legal para Portugal. Como avaliou a [OCDE
 (2008)](https://www.oecd.org/en/publications/jobs-for-immigrants-vol-2_9789264055605-en.html)
 o sistema de quotas não se mostrou eficaz, gerando um número muito
 limitado de trabalhadores estrangeiros que chegou por essa via mais
-demorada e burocrática ao país]{.mark}, não dando a resposta imediata
+demorada e burocrática ao país, não dando a resposta imediata
 que o mercado de trabalho precisava no recrutamento, mantendo-se por
 isso chegadas em situação irregular com mais rápida absorção no mercado
 de trabalho português, com destaque para as atividades não qualificadas.
@@ -410,7 +410,7 @@ Perceba-se que é Portugal que precisa de imigrantes, que o dinamismo
 económico nacional depende em grande medida de mão-de-obra estrangeira
 para exercer funções que os nacionais não querem ou não podem
 desempenhar e em setores chave. Entenda-se que [é Portugal que perde com
-o afastamento e os entraves à imigração]{.mark}, já que só retarda e
+o afastamento e os entraves à imigração], já que só retarda e
 penaliza o país na corrida (muito competitiva) que se vive hoje entre
 países europeus pela atração desses trabalhadores estrangeiros de fora
 da União Europeia.
