--- a/src/app/posts/203.md
+++ b/src/app/posts/203.md
@@ -36,7 +36,7 @@ culminando nas empresas, escolas e estabelecimentos encerrados e em
 grandes manifestações nas cidades e vilas.
 
 [Esta greve geral já teve a participação de milhares de imigrantes em
-diversos setores]{.mark}, até na Autoeuropa, como se percebia pela
+diversos setores], até na Autoeuropa, como se percebia pela
 diversidade de sotaques no piquete de greve e nos plenários. Mas há
 muito por fazer: a participação não foi homogénea - é tanto mais difícil
 assumir a luta quanto mais precário és.
@@ -102,12 +102,12 @@ melhorados e reforçados como direitos nas alterações legislativas de
 
 Mas não são as leis que moldam a vida, o determinante é a base económica
 a que Marx chamou a infraestrutura da sociedade. As leis respondem,
-melhor ou pior e geralmente em atraso, ao pulsar da vida económica. [Ao
+melhor ou pior e geralmente em atraso, ao pulsar da vida económica. Ao
 fechar as portas da regularização de imigrantes, era inevitável o
 disparar da economia paralela e do trabalho não declarado, em condições
 próximas da escravatura. A queda anunciada das contribuições para a
 segurança social em 2025 é um primeiro sintoma das escolhas do governo
-AD.]{.mark}
+AD.
 
 Numa simples frase: é a economia, estúpido!
 
