--- a/src/app/posts/205.md
+++ b/src/app/posts/205.md
@@ -23,11 +23,11 @@ profissão, do passado e da própria identidade.
 
 Esta ambivalência é refletida em muitos testemunhos de pessoas migrantes
 altamente qualificadas, cujos percursos migratórios implicaram uma
-rutura biográfica abrupta. [Para quem possuía trajetos profissionais
+rutura biográfica abrupta. Para quem possuía trajetos profissionais
 consolidados, formações superiores e identidades fortemente ligadas à
 sua ocupação, a migração impõe frequentemente uma descontinuidade
 profunda, com efeitos no bem-estar, na dignidade e no sentimento de
-pertença.]{.mark} Como partilhou uma mulher de nacionalidade angolana,
+pertença. Como partilhou uma mulher de nacionalidade angolana,
 que apesar de vir de uma vida estável, teve "*que começar mesmo do zero
 --- do zero".*
 
@@ -87,9 +87,9 @@ progredir profissionalmente.
 
 Esta internalização da precariedade começa a constituir-se, grande parte
 das vezes, após os primeiros tempos no novo país, a partir do contraste
-entre as expectativas iniciais e a realidade: *[\"procurei um país com
+entre as expectativas iniciais e a realidade: *\"procurei um país com
 melhores condições, para a vida ser mais fácil. (...) entretanto não
-sabia que seria tão difícil (...) é uma luta constante.\"]{.mark}*
+sabia que seria tão difícil (...) é uma luta constante.\"*
 
 O espaço público e político tem sido dominado por discursos assentes na
 divisão entre trabalhadores migrantes de primeira e de segunda. Nos
@@ -143,10 +143,10 @@ profissional e escapar de contextos discriminatórios: "*Eu* *trabalho*
 *de* *casa, porque eu não preciso sofrer* \[de me expor a situações
 precárias\]".
 
-Assim, as narrativas das pessoas migrantes evidenciam que, [entre a
+Assim, as narrativas das pessoas migrantes evidenciam que, entre a
 precariedade imposta e a proteção da dignidade, não emergem sujeitos
 passivos de um sistema desigual, mas agentes ativos que mobilizam
-múltiplas estratégias de resistência quotidiana]{.mark}. Seja pela
+múltiplas estratégias de resistência quotidiana. Seja pela
 recusa de aceitar condições indignas, pela procura de alternativas
 remotas que valorizam competências, ou pelo recurso a instituições de
 defesa de direitos, estas trajetórias desmentem a lógica de submissão e
@@ -206,8 +206,8 @@ comunidades de destino desperdiçam uma força de trabalho empreendedora e
 diversa, com potencial para dinamizar economias locais e enriquecer o
 tecido social e empresarial.
 
-O especialista em migrações [Hein de Haas mostra-nos como as populações
-migrantes tendem a empreender 50% mais do que os locais]{.mark},
+O especialista em migrações Hein de Haas mostra-nos como as populações
+migrantes tendem a empreender 50% mais do que os locais,
 promovendo inovação, criação de emprego e crescimento económico. E
 demonstra também como o acesso ao trabalho e ao empreendedorismo
 constitui a principal chave para a integração de pessoas migrantes.
@@ -245,10 +245,10 @@ pois, para manter o *status quo*, é necessário o silêncio, o virar o
 olhar e, simplesmente, uma ideia de que este assunto não nos diz
 respeito. Mas diz! Se é certo que são necessárias políticas e práticas
 estruturais para combater uma problemática sistémica, também é verdade
-que [nas ações coletivas, de amizade, de entreajuda, de posicionamento,
+que nas ações coletivas, de amizade, de entreajuda, de posicionamento,
 ou seja, nas nossas ações cidadãs também devemos assumir um lugar de
 questionamento, de visibilização das realidades injustas que perpetuam
-injustiças para quem as vive]{.mark}, mas também para toda uma sociedade
+injustiças para quem as vive, mas também para toda uma sociedade
 que desperdiça competências, saberes e experiências que poderiam
 enriquecer os espaços de trabalho e contribuir para sociedades mais
 diversas, inclusivas e criativas.
