--- a/src/app/posts/206.md
+++ b/src/app/posts/206.md
@@ -21,10 +21,10 @@ quem o sustenta.
 Vemos Motoristas a cambalear de sono em frente aos grandes centros
 comerciais e pontos turisticos, sem o descanso devido e dormindo no
 próprio carro, pondo em risco a sua própria segurança e dos passageiros.
-[Estafetas com mochilas térmicas cheias e de barrigas vazias. Carros e
+Estafetas com mochilas térmicas cheias e de barrigas vazias. Carros e
 motas sem manutenção, trabalhadores que arrendam um apartamento de 2 ou
 3 quartos para compartilhar entre dezenas de outros trabalhadores
-desconhecidos]{.mark}, mostrando a exploração cometida também pelo setor
+desconhecidos, mostrando a exploração cometida também pelo setor
 imobiliário. A profissão é formada, em maioria, por imigrantes sem
 documentos ou em fase de regularização. Assim, o trabalhador vai
 reclamar a quem, se ele "não existe"? O Governo apenas ignora tudo isto
@@ -35,10 +35,10 @@ trabalhadores sem dignidade e sem vida.
 
 A Agenda do Trabalho Digno, aprovada em 2023 e ainda em vigor, está a
 ser posta em causa, desde Julho de 2025, pelas propostas de alteração no
-Código do Trabalho, atingindo os Trabalhadores por App. [Percebe-se, de
+Código do Trabalho, atingindo os Trabalhadores por App. Percebe-se, de
 fato, uma relutância dos legisladores, aparentemente temendo o embate em
 torno da questão, seja por ignorância sobre a profissão ou sobre a
-exploração sofrida pelos trabalhadores]{.mark}.
+exploração sofrida pelos trabalhadores.
 
 Neste cenário, o Patrão Algoritmo impera. Estafetas e TVDEs pelas ruas,
 fiscalizados, cobrados e punidos por um Bot Algorítimo sem direito à
@@ -76,10 +76,10 @@ deriva.
 
 Agora fica fácil começar a entender o porquê destes trabalhadores,
 Estafeta e Tvde, passarem 12, 14 ou até 18 horas trabalhando
-diariamente. [Não há férias anuais, folgas semanais, pagamento de horas
+diariamente. Não há férias anuais, folgas semanais, pagamento de horas
 extras ou adicional noturno. Estes trabalhadores tem família para
 sustentar e são forçados e trabalhar numa espécie de confinamento sem
-fim.]{.mark} A promessa de flexibilidade e autonomia, eram apenas
+fim. A promessa de flexibilidade e autonomia, eram apenas
 armadilhas e os custos operacionais, insustentáveis. E assim, explorar o
 máximo de lucro em cima dos trabalhadores totalmente subordinados. A
 falta de transparência é total e reclamar pode causar penalizações ou
@@ -94,7 +94,7 @@ lucro\... sem regras, e pelo lucro em cima dos trabalhadores, vale tudo!
 
 [A Asitrap - Associação dos Imigrantes e Trabalhadores por Aplicação,
 foi fundada formalmente em fevereiro 2025 para ser o rosto da luta
-destes trabalhadores.]{.mark} Veio na sequência do grupo Estafetas em
+destes trabalhadores. Veio na sequência do grupo Estafetas em
 Luta, que nasceu em 2019 reunindo 48 estafetas da região norte, que
 lutaram contra as más condições de trabalho, e da fusão deste grupo com
 outros de outras regiões do país. A Asitap continua esta luta, toma
