--- a/src/app/posts/207.md
+++ b/src/app/posts/207.md
@@ -87,10 +87,10 @@ Plataformas*.[^10]
 
 A lógica de diferenciação social do trabalho imigrante em PDT afirma uma
 perspetiva fundamental para analisar a precariedade do setor, pois
-permite compreender como é que [o enquadramento público e político do
-sujeito imigrante]{.mark}[^11] [(re)produz processos de *racialização*
+permite compreender como é que o enquadramento público e político do
+sujeito imigrante[^11] (re)produz processos de *racialização*
 assentes em diferenças legais e sociopolíticas co-constitutivas do que
-podemos denominar de *Capitalismo Racial de Plataformas*.]{.mark}[^12]
+podemos denominar de *Capitalismo Racial de Plataformas*.[^12]
 
 Importa aqui distinguir a *racialização* de um conceito estático de
 raça, e defini-la como um processo ativo de alterização, através da
@@ -174,9 +174,9 @@ de subsistência,[^24] constituindo inclusive uma forma de resistência à
 organização do trabalho pela sua isenção de requisitos laborais baseados
 na cidadania.
 
-Por vezes, a combinação destas experiências com [a insegurança do seu
+Por vezes, a combinação destas experiências com a insegurança do seu
 estatuto sociolegal constrói uma força de trabalho predisposta a aceitar
-as condições que a plataforma impõe]{.mark}, salientando que a produção
+as condições que a plataforma impõe, salientando que a produção
 social e jurídica desta diferença, é também co-constitutiva da diferença
 produzida algoritmicamente pelas plataformas.
 
@@ -185,9 +185,9 @@ do supervisor, por um algoritmo que pode codificar os preconceitos de
 quem o determina, por exemplo, os sistemas de avaliação (*rating*)
 permitem que o racismo dos clientes determine quem pode continuar a
 trabalhar, resultando em desativações de conta (i.e. despedimento) sem
-direito a defesa. [Existe, portanto, uma relação bidirecional da
+direito a defesa. Existe, portanto, uma relação bidirecional da
 *racialização* -- enquanto causa e consequência dos próprios processos
-de plataformização da economia]{.mark} -- considerando que estas
+de plataformização da economia -- considerando que estas
 plataformas têm a capacidade de separar, e agregar, grupos de
 trabalhadores reforçando, ou diluindo, simultaneamente, as fronteiras
 sociais do trabalho imigrante que o delimita.[^25]
