--- a/src/app/posts/210.md
+++ b/src/app/posts/210.md
@@ -47,11 +47,11 @@ vem estabelecer, em moldes inovadores, que poderá vir a ser celebrado
 contrato de trabalho a termo certo, com duração máxima de dois anos,
 sempre que se trate da «contratação de trabalhador que nunca tenha
 prestado atividade ao abrigo de contrato de trabalho por tempo
-indeterminado». Ou seja, [segundo esta proposta, a circunstância de um
+indeterminado». Ou seja, segundo esta proposta, a circunstância de um
 trabalhador nunca antes ter sido titular de um contrato de trabalho
 *standard*, sem termo, legitima que se perpetue a precariedade laboral
 desse mesmo trabalhador, que poderá ir sendo contratado, sucessivamente,
-por diversos empregadores, sempre a prazo,]{.mark} mesmo que para
+por diversos empregadores, sempre a prazo, mesmo que para
 satisfazer necessidades de trabalho permanentes das empresas em que for
 laborando. Contanto que nenhum empregador o macule, contratando-o sem
 termo, este trabalhador transforma-se num permanente candidato a ser
@@ -108,10 +108,10 @@ Tudo mudará, para muito melhor, com o anteprojeto. O trabalhador vai
 passar a poder dispor amplamente dos seus direitos de crédito, inclusive
 renunciando aos mesmos em proveito do seu empregador, a todo o tempo.
 Para tal, basta que o declare expressamente, por escrito, com
-reconhecimento notarial. Maravilha! [Pensará o empregador: para quê
+reconhecimento notarial. Maravilha! Pensará o empregador: para quê
 pagar, se tenho forma de (e força para) pressionar o meu credor a
 renunciar aos seus direitos? Assim é muito mais flexível, cómodo e
-barato! *Simplex*!]{.mark}
+barato! *Simplex*!
 
 É isto, sem tirar nem pôr, aquilo que o governo propõe aos
 trabalhadores, na sua autodenominada reforma laboral (ou liberal?)
@@ -136,7 +136,7 @@ que, pela vez primeira entre nós, permite a renúncia a tudo e a todo o
 tempo, coonestando a abdicação do trabalhador perante o empregador,
 através de uma simples assinatura reconhecida notarialmente.
 
-2.  **Despedimento ilícito e (não) reintegração.**
+1.  **Despedimento ilícito e (não) reintegração.**
 
 Em matéria de despedimento, o princípio geral consagrado no atual Código
 do Trabalho continua a ser aquele que foi acolhido no nosso país após a
@@ -166,9 +166,9 @@ permitiria, afinal, à entidade empregadora aquilo que a CRP quer,
 manifestamente, proibir -- *desembaraçar-se* do trabalhador apesar de
 não haver causa legítima de despedimento".
 
-[O direito à reintegração do trabalhador ilicitamente despedido
+O direito à reintegração do trabalhador ilicitamente despedido
 constituiu um dos eixos do nosso ordenamento jurídico-laboral
-subsequente à Revolução de Abril]{.mark}. Mas, em 2003, o Código do
+subsequente à Revolução de Abril. Mas, em 2003, o Código do
 Trabalho veio introduzir neste ponto novidades significativas, passando
 a prever um leque de possíveis exceções à tutela reintegratória. Com
 efeito, tendo o trabalhador optado pela reintegração na empresa, em
@@ -191,10 +191,10 @@ funções dirigentes e que laborem em pequenas, médias ou grandes empresas
 initio*, excluída.
 
 Ora, o que consta do Anteprojeto apresentado pelo governo, nesta
-matéria? Muito simples: transforma-se a exceção em regra e [passa a
+matéria? Muito simples: transforma-se a exceção em regra e passa a
 prever-se, de forma generalizada, que, sendo o despedimento ilícito e
 desejando o trabalhador retomar o seu posto de trabalho, o empregador
-possa opor-se, solicitando ao tribunal que exclua a reintegração]{.mark}
+possa opor-se, solicitando ao tribunal que exclua a reintegração
 -- isto para todas as empresas, micro ou grandes, e para todos os
 trabalhadores, dirigentes ou indiferenciados. Vale dizer, o trabalhador
 é ilegalmente despedido e lançado para o desemprego, vê o seu direito
@@ -242,7 +242,7 @@ traduz uma opção ideológica de quem governa, legítima em si mesma, mas
 incompatível com a pauta de valores consagrada na nossa Constituição. E,
 por isso, juridicamente inadmissível.
 
-3.  **O impúdico retorno do *despedir-para-terceirizar***
+1.  **O impúdico retorno do *despedir-para-terceirizar***
 
 Uma das normas mais polémicas da "Agenda do Trabalho Digno" consistiu no
 novo art.º 338.º-A do Código, que proíbe ao empregador a aquisição de
@@ -274,12 +274,12 @@ de terceirizar serviços), justificava a decisão de despedimento tomada
 pelo empregador, a jusante.
 
 Confrontado com este estado de coisas, afigura-se curial que o
-legislador tenha revisitado a matéria, sinalizando que, [sem prejuízo da
+legislador tenha revisitado a matéria, sinalizando que, sem prejuízo da
 admissibilidade de despedimentos baseados em causas objetivas (isto é,
 em motivos de mercado, estruturais ou tecnológicos), nem todas as causas
 objetivas são suficientemente ponderosas em ordem a legitimar o
 despedimento dos trabalhadores. Em particular, não o será a decisão
-gestionária de terceirização de serviços]{.mark}, a qual, a ser
+gestionária de terceirização de serviços, a qual, a ser
 implementada, terá de passar por outros caminhos que não o despedimento.
 
 Nunca vislumbrei razão para censurar, no plano constitucional, a nova
@@ -308,9 +308,9 @@ por larga maioria dos Conselheiros (10-3). O Acórdão n.º 555/2025, de 2
 de julho, é um aresto em que o tribunal revela firmeza, não cede nos
 valores prioritários e reafirma a validade e atualidade da axiologia
 constitucional. Para o TC, o que se pretende vedar ao empregador, com
-aquele preceito, é o recurso ao *despedimento-para-terceirizar*, [sendo
+aquele preceito, é o recurso ao *despedimento-para-terceirizar*, sendo
 que o enquadramento constitucional da norma não gera dúvidas:
-pretendeu-se salvaguardar o direito à]{.mark} segurança no emprego, em
+pretendeu-se salvaguardar o direito à segurança no emprego, em
 confronto com o princípio da livre iniciativa económica privada, visto
 que, segundo a CRP, no campo das relações laborais a liberdade de
 contratação empresarial tem de ser exercida de maneira a assegurar a
@@ -329,7 +329,7 @@ lucro dos seus titulares, bastará para legitimar o despedimento. Coisa,
 a meu ver, inadmissível e contrária ao quadro de valores acolhido pela
 CRP.
 
-4.  **O procedimento disciplinar e o discreto regresso da instrução
+1.  **O procedimento disciplinar e o discreto regresso da instrução
     facultativa**
 
 Quanto o trabalhador é acusado de ter cometido alguma infração
@@ -367,9 +367,9 @@ utilizando uma diferente técnica legislativa. Com efeito, a lei parece
 manter, intocada, a obrigatoriedade de realização da instrução, mas
 depois, discretamente, na última norma do Código relativa ao
 procedimento disciplinar (o artigo 358.º), a lei dispensa essa instrução
-no âmbito das micro, pequenas e médias empresas. Vale dizer, [a
+no âmbito das micro, pequenas e médias empresas. Vale dizer, a
 obrigatoriedade de realização da instrução só se manterá para as grandes
-empresas, aquelas que empregam 250 ou mais trabalhadores.]{.mark}
+empresas, aquelas que empregam 250 ou mais trabalhadores.
 
 Tendo em conta o já decidido, sobre o ponto, pelo TC, não se percebe
 muito bem por que motivo resolve o governo voltar à carga, nesta
@@ -385,7 +385,7 @@ duvidoso que esteja conforme com as exigências constitucionais nesta
 matéria, que garantem, repete-se, não só o direito de audiência, mas
 também o direito de defesa do arguido.
 
-5.  **O banco de horas individual**
+1.  **O banco de horas individual**
 
 O banco de horas consiste num mecanismo flexibilizador da organização do
 tempo de trabalho, que confere ao empregador o poder de alargar o
@@ -397,10 +397,10 @@ feita mediante diversas formas: seja através da redução equivalente do
 tempo de trabalho, seja mediante pagamento em dinheiro, seja, até,
 através do aumento do período de férias do trabalhador.
 
-[O banco de horas foi introduzido na nossa legislação laboral pelo
+O banco de horas foi introduzido na nossa legislação laboral pelo
 Código de 2009. Contudo, na sua redação originária, o Código apenas
 permitia que este mecanismo fosse gerado e moldado mediante instrumento
-de regulamentação coletiva de trabalho]{.mark}. Só a autonomia coletiva
+de regulamentação coletiva de trabalho. Só a autonomia coletiva
 poderia, pois, dar vida a este instituto, surgindo a convenção coletiva
 como condição *sine qua non* para que o empregador pudesse implantar o
 esquema do banco de horas. Mas, dando cumprimento ao chamado "Memorando
@@ -430,17 +430,17 @@ individual, revogando o art.º 208.º-A do CT, mas, em contrapartida,
 reformulou o art.º 208.º-B, criando um banco de horas grupal por via
 referendária, regulado nos nºs 2 a 12 do referido artigo.
 
-Ora, que faz agora [o governo]{.mark}, no anteprojeto? [Ressuscita o
+Ora, que faz agora o governo, no anteprojeto? Ressuscita o
 banco de horas individual, instituído por acordo entre o empregador e o
 trabalhador, caso em que o período normal de trabalho poderá ser
-aumentado até duas horas diárias e atingir 50 horas semanais]{.mark}. O
+aumentado até duas horas diárias e atingir 50 horas semanais. O
 acordo do trabalhador pode, ademais, ser obtido através de adesão
 tácita, sendo que este instituto tem a vantagem, para o empregador, de
 evitar o recurso ao trabalho suplementar -- com o inerente pagamento de
 remuneração majorada para os trabalhadores que prestassem tal trabalho.
-Por outro lado, convém sublinhar que, nos termos da lei, [o dono do
+Por outro lado, convém sublinhar que, nos termos da lei, o dono do
 banco de horas é o empregador, não o trabalhador, pois será o empregador
-que terá a faculdade de gerir o tempo]{.mark}, comunicando ao
+que terá a faculdade de gerir o tempo, comunicando ao
 trabalhador a necessidade de prestação de trabalho, com determinada
 antecedência. Como escreve Jorge Leite, a expressão banco de horas
 "sugere uma conta em horas de trabalho aberta em nome da parte
