--- a/src/app/posts/211.md
+++ b/src/app/posts/211.md
@@ -71,11 +71,11 @@ situação do trabalhador no plano individual.
 
 Daí que a coligação de trabalhadores, depois de muita resistência,
 deixasse de ser vista como um ilícito penal e civil e, num processo
-complexo, sinuoso e doloroso, [o sindicato, a contratação coletiva e a
-greve]{.mark}, com a instauração e fortalecimento dos regimes
-democráticos, ascendessem a direitos dos trabalhadores. [Constituem um
+complexo, sinuoso e doloroso, o sindicato, a contratação coletiva e a
+greve, com a instauração e fortalecimento dos regimes
+democráticos, ascendessem a direitos dos trabalhadores. Constituem um
 tripé jurídico para contrabalançar o poder de autoridade e de direção do
-empregador sobre o trabalhador]{.mark} e suavizar os efeitos económicos
+empregador sobre o trabalhador e suavizar os efeitos económicos
 e sociais negativos próprios de um sistema baseado na liberdade de
 empresa e no mercado. Esta dimensão deve estar presente na análise deste
 Anteprojeto.
@@ -174,10 +174,10 @@ garantir o direito é, antes de tudo, protegê-lo. Não é, certamente,
 aceitar soluções normativas norteadas para facilitar o desaparecimento
 de convenções coletivas.
 
-Do regime constitucional resulta que a [convenção coletiva é
+Do regime constitucional resulta que a convenção coletiva é
 principalmente fruto do exercício de um direito pertencente aos
 trabalhadores. Não é um mero produto da liberdade contratual de
-sindicatos e empregadores ou suas associações]{.mark}. Neste domínio não
+sindicatos e empregadores ou suas associações. Neste domínio não
 é o puro arbítrio das partes que releva, mas o objetivo de, através do
 consenso delas, alcançar uma disciplina laboral benéfica para os
 trabalhadores. O acordo das partes é o meio particularmente adequado
@@ -218,7 +218,7 @@ democrática de 1974. Constituíram e constituem instrumentos de
 excelência para a densificação de uma verdadeira democracia económica e
 social (art.º 2º da CRP).
 
-3.  **O Código de Trabalho de 2003**
+1.  **O Código de Trabalho de 2003**
 
 O legislador de 2003 aboliu os princípios do tratamento mais favorável e
 da continuidade da convenção coletiva. Entrou em rutura com o passado. O
@@ -244,16 +244,16 @@ Numa votação tangencial, o Acórdão 306/2003, de 25 de junho, respondeu
 positivamente, mas condicionou o seu juízo, entre outros pressupostos,
 ao entendimento seguinte:
 
-"[Constituiu, no entanto, pressuposto desta posição o entendimento de
+"Constituiu, no entanto, pressuposto desta posição o entendimento de
 que a caducidade da eficácia normativa da convenção não impede que os
 efeitos desse regime se mantenham quanto aos contratos individuais de
 trabalho celebrados na sua vigência e às respectivas
-renovações".]{.mark}
+renovações".
 
-[Portanto, a caducidade apenas foi considerada conforme à CRP na
+Portanto, a caducidade apenas foi considerada conforme à CRP na
 pressuposição de que o conteúdo da convenção coletiva caducada passaria
 para os contratos de trabalho até aí por ela abrangidos. Esta condição
-nunca veio a verificar-se]{.mark}. As soluções legislativas posteriores
+nunca veio a verificar-se. As soluções legislativas posteriores
 apenas determinaram a manutenção de alguns efeitos já produzidos nos
 contratos de trabalho (art.º 501º, n.º 8, do CT)[^6].
 
@@ -265,7 +265,7 @@ argumentação nada clara, ou melhor, baseada em raciocínios que apontam
 para conclusões divergentes, o Tribunal Constitucional concluiu pelo não
 acolhimento na CRP do princípio do tratamento mais favorável.
 
-4.  **O Anteprojeto XXI ora em discussão**
+1.  **O Anteprojeto XXI ora em discussão**
 
 O Código do Trabalho de 2003 tem sido alterado com alguma frequência. O
 princípio do tratamento mais favorável foi parcialmente recuperado em
@@ -332,9 +332,9 @@ o limite de cada uma delas. Nomeadamente, é preciso saber se a convenção
 coletiva pode fixar um regime menos benéfico para o teletrabalhador do
 que a lei. O legislador, em 2021, pertinentemente, veio afirmar que a
 convenção coletiva deve estabelecer condições mais favoráveis (art.º 3º,
-n.º 3, al. K). Pois bem, [o Anteprojeto]{.mark} tem outra opinião. [Acha
+n.º 3, al. K). Pois bem, o Anteprojeto tem outra opinião. Acha
 que a convenção coletiva pode piorar as condições estabelecidas na lei.
-É um mau sinal que dá para o teletrabalhador do séc. XXI.]{.mark}
+É um mau sinal que dá para o teletrabalhador do séc. XXI.
 
 O trabalho suplementar é uma matéria com sérias implicações económicas,
 sociais, familiares e pessoais. As exigências e conveniências
@@ -358,9 +358,9 @@ surpreendentemente, manteve os mesmos acréscimos retributivos até às 100
 horas, limite a partir do qual recuperou o regime tradicional, isto é, o
 regime que vigorou até 2012.
 
-[O Anteprojeto quer que os instrumentos de regulamentação coletiva,
+O Anteprojeto quer que os instrumentos de regulamentação coletiva,
 desde logo a convenção coletiva, tenham a faculdade de baixar o preço do
-trabalho suplementar]{.mark}. Num país onde se usa e abusa do trabalho
+trabalho suplementar. Num país onde se usa e abusa do trabalho
 suplementar -- pense-se na escandalosa situação vivida nos hospitais -,
 o que se propõe é a faculdade de baixar o custo do trabalho suplementar.
 E assim se dá mais uma ferroada à limitação da indisponibilidade do
@@ -377,9 +377,9 @@ este regime. Esta intenção é de aplaudir.
 
 Só que a alteração não fica por aqui. Propõe-se em lugar do regime
 antissindical, outra solução igualmente contra os sindicatos. Com
-efeito, [o empregador, havendo na sua empresa uma convenção coletiva que
+efeito, o empregador, havendo na sua empresa uma convenção coletiva que
 "abranja mais de metade dos trabalhadores", poderá estendê-la, por
-decisão unilateral aos restantes trabalhadores]{.mark}. Esta decisão
+decisão unilateral aos restantes trabalhadores. Esta decisão
 apenas não valerá em relação aos trabalhadores não sindicalizados se
 estes se opuserem, e em relação aos filiados em associações sindicais se
 estas recusarem a ampliação da eficácia subjetiva da convenção.
@@ -462,21 +462,21 @@ por elas instituída.
 É perfeitamente compreensível, à luz do breve quadro acabado de expor,
 que a Lei 93/2019, de 4 de abril, tenha vindo exigir a fundamentação da
 denúncia. O art.º 500º, n.º 2, do CT, passou a ter a seguinte redação:
-"[A denúncia deve, sem prejuízo da sua validade e eficácia, ser
+"A denúncia deve, sem prejuízo da sua validade e eficácia, ser
 acompanhada de fundamentação quanto a motivos de ordem económica,
 estrutural ou a desajustamentos do regime da convenção denunciada". Este
 regime é razoável, mas frágil. Mesmo que a fundamentação seja deficiente
 ou até, porventura, esteja ausente, a denúncia será considerada válida.
 Um regime deste tipo não prima pela coerência. Afinal consagra-se um
 dever de fundamentação cuja violação não acarreta nenhuma consequência
-jurídica.]{.mark}
+jurídica.
 
 É contra esta incoerência que deve ser entendida a modificação de regime
 introduzida pela Agenda de Trabalho Digno. Esta continuou a impor a
 mesma obrigação de fundamentação, tendo deixado de mencionar o inciso:
-"... [sem prejuízo da sua validade e eficácia". O que significa que se a
+"... sem prejuízo da sua validade e eficácia". O que significa que se a
 fundamentação não for acompanhada de motivação económica ou
-estrutural]{.mark} procedente ou não forem invocados desajustamentos
+estrutural procedente ou não forem invocados desajustamentos
 relevantes, a denúncia poderá não ser válida nem eficaz.
 
 O legislador de 2023 atribuiu relevância à fundamentação da denúncia.
@@ -491,18 +491,18 @@ suscitará, com certeza, diversidade interpretativa. O que será denúncia
 justificada para o outorgante patronal poderá não o ser para o
 outorgante sindical. A incerteza interpretativa, atendendo ao tipo de
 conflito e à provável amplitude e complexidade dos interesses em jogo,
-será praticamente inevitável. Nesta senda, [a reforma de 2023 recorreu à
+será praticamente inevitável. Nesta senda, a reforma de 2023 recorreu à
 arbitragem, um mecanismo imparcial, para apreciar se os fundamentos
 invocados para a denúncia devem ou não ser considerados
-subsistentes]{.mark}. Caso o tribunal arbitral delibere que os
+subsistentes. Caso o tribunal arbitral delibere que os
 fundamentos apresentados pelo denunciante são improcedentes, então a
 denúncia não produzirá efeitos (art.º 500º-A, n. º4, do CT). O processo
 que poderia potencialmente conduzir mais tarde à caducidade da convenção
 extinguir-se-á de imediato.
 
-[O Anteprojeto]{.mark} não vê a solução normativa atual com bons olhos.
-[Pretende regressar à solução introduzida pelo legislador de
-2019]{.mark}. Condescende com o dever de fundamentação da denúncia,
+O Anteprojeto não vê a solução normativa atual com bons olhos.
+Pretende regressar à solução introduzida pelo legislador de
+1.    Condescende com o dever de fundamentação da denúncia,
 porém, se a fundamentação for descabida ou frouxa, isso não importará; a
 validade e eficácia da denúncia não será afetada. O processo seguirá
 adiante. Mesmo que o denunciante tenha como único fito alcançar a
@@ -526,27 +526,27 @@ entidade coletiva, um colégio ou tribunal, composto por um árbitro da
 parte patronal, por um árbitro parte sindical e por um árbitro
 presidente, cujo estatuto é de independência.
 
-[A arbitragem está prevista no Código do Trabalho Português para a
+A arbitragem está prevista no Código do Trabalho Português para a
 resolução de conflitos coletivos laborais, nomeadamente os que surgem em
 torno da convenção coletiva, e para a fixação dos serviços mínimos na
 greve nos serviços essenciais. Esta última modalidade desenvolve-se nas
 empresas do setor empresarial do Estado e na Administração Pública, onde
-tem tido uma significativa aplicação.]{.mark}
+tem tido uma significativa aplicação.
 
-[No domínio da composição dos conflitos coletivos laborais, a arbitragem
+No domínio da composição dos conflitos coletivos laborais, a arbitragem
 pode ser baseada na vontade das partes em conflito, denominando-se de
 arbitragem voluntária ou facultativa, ou determinada pela Administração
 Pública do Trabalho a solicitação de um interessado, designando-se,
 entre nós, num caso arbitragem obrigatória e no outro arbitragem
-necessária.]{.mark}
+necessária.
 
-[A estas duas modalidades mais antigas, o CT veio acrescentar, mais
+A estas duas modalidades mais antigas, o CT veio acrescentar, mais
 recentemente, a arbitragem para apreciação da denúncia da convenção
 coletiva (art.º 500º-A, do CT), em 2023, e a arbitragem para a suspensão
 do período de sobrevigência (art.º 501º-A, do CT), em 2019. É esta
-modalidade que está agora aqui em causa.]{.mark}
+modalidade que está agora aqui em causa.
 
-[Para a compreensão desta modalidade devemos ter em atenção o chamado
+Para a compreensão desta modalidade devemos ter em atenção o chamado
 regime da sobrevigência da convenção coletiva. Esta não cessa a sua
 eficácia quando se atinge o prazo de vigência. A partir deste prazo a
 convenção deixa o período de vigência e entra no período de
@@ -555,16 +555,16 @@ o qual as partes devem negociar diretamente ou, se entenderem
 preferível, recorrer à conciliação, à mediação ou à arbitragem
 voluntária. Todos estes atos fazem parte de um processo iniciado com a
 denúncia que, caso as partes não alcancem um acordo, conduzirá à
-caducidade da convenção coletiva.]{.mark}
+caducidade da convenção coletiva.
 
-[Foi contra esta hipótese que a reforma de 2023 reagiu. Admitiu que
+Foi contra esta hipótese que a reforma de 2023 reagiu. Admitiu que
 qualquer das partes celebrantes da convenção coletiva possa requerer uma
 arbitragem ao Presidente do Conselho Económico e Social para suspender,
-travar temporariamente, o decurso da sobrevigência.]{.mark}
+travar temporariamente, o decurso da sobrevigência.
 
-[Esta arbitragem não visa a resolução de qualquer conflito coletivo
+Esta arbitragem não visa a resolução de qualquer conflito coletivo
 entre os outorgantes da convenção coletiva. Nas palavras da lei,
-"]{.mark}... tem por objeto a verificação da existência de probabilidade
+"... tem por objeto a verificação da existência de probabilidade
 séria de as partes chegarem a acordo para a revisão parcial ou total da
 convenção coletiva".
 
@@ -620,9 +620,9 @@ arbitral do que negociar a partir do nada.
 
 Este regime, porventura uma das inovações mais significativas no âmbito
 da reforma de 2023, será suprimido caso o Anteprojeto seja aprovado.
-[Desaparecerá]{.mark} o art.º 501º-A, do CT, onde se prevê [o
+Desaparecerá o art.º 501º-A, do CT, onde se prevê o
 procedimento da arbitragem para a suspensão do período de
-sobrevigência]{.mark}, bem como, consequentemente, as situações
+sobrevigência, bem como, consequentemente, as situações
 descritas que justificavam o recurso à arbitragem necessária, hoje
 previstas no art.º 510º, n.º 2, do CT.
 
@@ -705,9 +705,9 @@ fita". É pena.
 
 **4.6. A reforma laboral a fazer**
 
-[Decorre do exposto uma atitude crítica em relação às propostas do
+Decorre do exposto uma atitude crítica em relação às propostas do
 Anteprojeto XXI sobre a contratação coletiva. Não vislumbramos nenhum
-aspeto positivo]{.mark}. O afastamento da escolha da convenção coletiva
+aspeto positivo. O afastamento da escolha da convenção coletiva
 por trabalhadores não filiados em sindicatos foi positiva. Porém, o
 acerto desta medida foi anulado pela alternativa proposta: possibilitar
 ao empregador a ampliação da convenção coletiva a trabalhadores por ela
@@ -715,9 +715,9 @@ não abrangidos. O empregador não é o dono da convenção coletiva. Também
 esta medida é animada por um forte cunho antissindical.
 
 Fora do âmbito da contratação coletiva, ainda na área das relações
-coletivas, [o Anteprojeto continua dominado por uma intenção de
+coletivas, o Anteprojeto continua dominado por uma intenção de
 desequilibrar a relação de trabalho a favor do empregador. Quer inclinar
-mais um terreno que já está inclinado.]{.mark}
+mais um terreno que já está inclinado.
 
 No domínio sindical, a reunião de associações sindicais com
 trabalhadores não sindicalizados, uma importante dimensão da atividade
@@ -737,8 +737,8 @@ anteprojeto nada diz. Mantém intocado um regime que já vem do Código do
 Trabalho de 2003[^11]. Em que se retira ao delegado sindical das micro e
 pequenas empresas o direito à informação e consulta. Isto depois do
 art.º 55º, n.º 6, da CRP, a partir da quarta revisão constitucional de
-1997, ter ordenado à lei que assegure «... [protecção adequada aos
-representantes eleitos dos trabalhadores»]{.mark}[^12][. E nenhuma
+1997, ter ordenado à lei que assegure «... protecção adequada aos
+representantes eleitos dos trabalhadores»[^12]. E nenhuma
 dúvida de que os delegados sindicais das micro e pequenas empresas são
 representantes eleitos dos trabalhadores. Nada no preceito
 constitucional autoriza a restrição deste direito fundamental. Poderá,
@@ -751,7 +751,7 @@ esmagadora maioria das empresas são micro e pequenas empresas. Não será
 este regime um atentado ao art.º 55º, n.º 6, da CRP? Julgamos que sim. O
 Anteprojeto, porém, tão pressuroso em mexer no direito vigente -- mais
 de cem alterações --, nesta matéria quer a continuação do
-regime.]{.mark}
+regime.
 
 No que respeita à greve nos serviços essenciais, surgem novos exemplos
 de setores onde são exigidos serviços mínimos. São expressamente
@@ -795,8 +795,8 @@ mínimos na greve, muito em voga na comunicação social, e sufragada, ao
 que parece, pelos autores do Anteprojeto, corresponderá, pois, a uma
 leitura desconforme com os ditames constitucionais sobre a greve.
 
-[A impressão geral com que se fica em matéria de contratação coletiva é
-a de que se pretende uma desforra da Reforma do Trabalho Digno.]{.mark}
+A impressão geral com que se fica em matéria de contratação coletiva é
+a de que se pretende uma desforra da Reforma do Trabalho Digno.
 Por isso se extinguiram algumas modalidades arbitrais e se a facilitou a
 denúncia. A via para a caducidade da convenção coletiva ficará mais
 desimpedida. Com o que se instabilizará mais a convenção coletiva e se
@@ -805,10 +805,10 @@ Fomentando-se a precarização das condições de trabalho.
 
 Num país de baixos salários, a convenção coletiva não pode deixar de ser
 um instrumento de promoção dos salários e de melhor distribuição do
-rendimento nacional. [Ao permitir que seja lícito baixar o preço do
+rendimento nacional. Ao permitir que seja lícito baixar o preço do
 trabalho suplementar através de convenção coletiva, a mensagem que se
 transmite é a de que a retribuição é apenas um custo empresarial a
-embaratecer]{.mark}; não um direito a fortalecer para "garantir uma
+embaratecer; não um direito a fortalecer para "garantir uma
 existência condigna" (art.º 59º, n.º 1, al. a) da CRP.
 
 Numa época de extrema instabilidade da relação laboral, de
@@ -868,7 +868,7 @@ solução do Acórdão 338/2010, de 22 de setembro, não se nos afigura
 convincente.
 
 É oportuno relembrar a este propósito as palavras do ex-conselheiro do
-Tribunal Constitucional Mário Torres: "[a imposição da caducidade da
+Tribunal Constitucional Mário Torres: "a imposição da caducidade da
 convenção representa uma ingerência estadual na autonomia colectiva em
 domínios em que o legislador ordinário, de acordo com o alcance
 constitucional do direito à contratação colectiva, reconhecera a
@@ -877,20 +877,20 @@ sistema jurídico de produtos negociais reconhecidos como fontes de
 direito, só porque os sujeitos interessados não os alteraram ou
 substituíram, isto é, uma caducidade imposta pelo legislador quando no
 sentido da cessação de efeitos da convenção não se manifesta nenhuma
-vontade colectiva comum"]{.mark}[^15][.]{.mark}
+vontade colectiva comum"[^15]
 
 Por seu turno, embora o TC tenha reconhecido que o princípio do
 tratamento mais favorável não está acolhido na CRP (Acórdão 338/2010, de
 22 de setembro), a argumentação tem muitas sombras e parece pouco
 convincente. Mais clara e convincente nos parece a posição da
-ex-conselheira do Tribunal Constitucional Maria Helena Brito: "... [do
+ex-conselheira do Tribunal Constitucional Maria Helena Brito: "... do
 princípio do Estado Social consagrado na Constituição Portuguesa é
 possível retirar o "princípio do tratamento mais favorável do
 trabalhador". Tal significa que as várias injunções constitucionais no
 domínio laboral devem interpretar-se no sentido de que estabelecem uma
 tutela mínima: ao Estado cabe definir e garantir um programa, que os
 destinatários podem concretizar, melhorando, mas não piorando, as
-condições que derivam da lei"]{.mark}[^16][.]{.mark}
+condições que derivam da lei"[^16]
 
 Estas opiniões são de subscrever. Embora não haja referência expressa na
 CRP, de um conjunto de normas e princípios resulta a sua receção
@@ -921,8 +921,8 @@ A reforma que ora se propõe não é um regresso ao passado. É um regresso
 à razão de ser do próprio direito do trabalho. Um sinal de esperança no
 futuro. Vai no sentido de desenvolver a Constituição do Trabalho.
 
-O mesmo não sucede com o Anteprojeto. [Este parece consubstanciar um
-projeto ideológico adverso à CRP. Para a pôr em causa.]{.mark} Se assim
+O mesmo não sucede com o Anteprojeto. Este parece consubstanciar um
+projeto ideológico adverso à CRP. Para a pôr em causa. Se assim
 for, é pena. A CRP é uma das mais belas realizações da democracia
 portuguesa. É uma constituição cidadã, amiga das pessoas que trabalham,
 das que criam riqueza, e por isso, protetora da dignidade das pessoas em
@@ -978,14 +978,14 @@ vezes, de passar pelo inferno e sorrir para o diabo.
     214-216.
 
 [^14]: Julga-se oportuno recordar as palavras da ex-conselheira do
-    Tribunal Constitucional Maria Fernanda Palma: "[Enquanto direito dos
+    Tribunal Constitucional Maria Fernanda Palma: "Enquanto direito dos
     trabalhadores e não, obviamente, dos empregadores, o direito à
     contratação colectiva não pode ser encarado no mesmo plano que a
     liberdade negocial dos empregadores. Se é um direito dos
     trabalhadores, não pode ter exactamente o mesmo conteúdo que a
     autonomia privada reconhecida a todos os cidadãos e que a
     Constituição nem explicita como direito específico" (Voto de vencida
-    no Acórdão]{.mark} 306/2003, de 25 de junho[).]{.mark}
+    no Acórdão 306/2003, de 25 de junho).
 
 [^15]: Voto de vencido de Mário Torres no Ac. 306/2003, de 25 de junho,
     de que foi relator.
