--- a/src/app/posts/212.md
+++ b/src/app/posts/212.md
@@ -29,10 +29,10 @@ dezenas de metros do Palazzo Chigi, a sede do governo. Manifestações
 semelhantes, com grande participação, ocorreram em dezenas de cidades.
 Depois, na quinta-feira, 2 de outubro, multidões reuniram-se em frente
 ao Coliseu em Roma e em dezenas de outras cidades nas praças principais
-ou em frente aos edifícios dos governos locais. [Na sexta-feira, dia da
+ou em frente aos edifícios dos governos locais. Na sexta-feira, dia da
 oportuna greve geral convocada pela CGIL e sindicatos de base, mais de
 dois milhões de pessoas encheram mais de uma centena de praças em toda a
-Itália.]{.mark} E, finalmente, no sábado, 4 de outubro, uma onda de
+Itália. E, finalmente, no sábado, 4 de outubro, uma onda de
 humanidade invadiu a capital. Esta foi uma participação massiva como
 nenhuma outra manifestação na história recente. Jovens e muito jovens,
 famílias, cidadãos comuns, ombro a ombro com associações, partidos de
@@ -89,12 +89,12 @@ milhares de estudantes, desde o ensino primário (dos 11 aos 14 anos) até
 às universidades, de participar em manifestações em todas as cidades
 italianas.
 
-Separadamente, [os órgãos de direção da CGIL, da USB e doutros
-sindicatos de base anunciaram que convocariam uma greve geral]{.mark} --
+Separadamente, os órgãos de direção da CGIL, da USB e doutros
+sindicatos de base anunciaram que convocariam uma greve geral --
 como uma "greve política" em defesa da Constituição, cujo Artigo 11
 "repudia a guerra" --, sem notificar a Comissão de Regulação das Greves,
-[caso a Flotilha Global Sumud fosse atacada pelas forças armadas
-israelitas]{.mark}. Pela primeira vez, na história política e sindical
+caso a Flotilha Global Sumud fosse atacada pelas forças armadas
+israelitas. Pela primeira vez, na história política e sindical
 do país, foi realizada uma conferência de imprensa coletiva na véspera
 de 3 de outubro, coordenada pelos porta-vozes italianos da Flotilha
 Global Sumud, para explicar as motivações e modalidades da greve geral,
