--- a/src/app/posts/213.md
+++ b/src/app/posts/213.md
@@ -32,11 +32,11 @@ limitação dos efeitos que a mudança climática trouxe. Entre eles, existe
 uma maior limitação para a emissão de carbono para a atmosfera. Isso
 implica alterações nos sistemas motrizes.
 
-Assim, [estas tendências recentes do setor automóvel implicam alterações
+Assim, estas tendências recentes do setor automóvel implicam alterações
 que representam, em Portugal, enormes desafios para os sindicatos e as
 comissões de trabalhadores. São necessários novos conhecimentos,
 competências e capacidades dos trabalhadores para produzirem esses novos
-produtos]{.mark}. Novas estratégias de formação serão necessárias para
+produtos. Novas estratégias de formação serão necessárias para
 adaptar as necessidades de competências com as já existentes. E,
 finalmente, tudo isto implica novos tópicos para negociação entre os
 parceiros sociais.
@@ -78,10 +78,10 @@ Com este contexto de alterações de política, Portugal continua a ter uma
 forte presença nas indústrias de média tecnologia, como a de componentes
 e máquinas para automóveis. Estas empresas fornecedoras são menos
 intensivas em capital e tecnologia, em comparação com setores de alta
-tecnologia, como o aeroespacial ou o farmacêutico. Contudo, [alguns dos
+tecnologia, como o aeroespacial ou o farmacêutico. Contudo, alguns dos
 fabricantes de equipamentos automóveis que operam em Portugal são
 intensivos em tecnologia e dependem de empresas globais para as decisões
-sobre os modelos de automóveis a serem produzidos]{.mark}. Outras
+sobre os modelos de automóveis a serem produzidos. Outras
 empresas têm acordos com outras empresas globais sobre *joint ventures*
 em produtos inovadores.
 
@@ -155,10 +155,10 @@ relacionado com a política logística de *just-in-time* adoptada pela
 Volkswagen. Existem, no entanto, tentativas de organizar uma Comissão de
 Coordenação das CT do Sector Automóvel a nível nacional.
 
-[A maioria dos representantes dos trabalhadores em Portugal debate,
+A maioria dos representantes dos trabalhadores em Portugal debate,
 conhece e possui informação sobre digitalização, eletrificação e
 automatização, mas não pressiona os empregadores para negociarem estes
-temas no diálogo social]{.mark}. As CT não estão a incluir o tema da
+temas no diálogo social. As CT não estão a incluir o tema da
 \"mudança tecnológica\" nos acordos de empresa. Os representantes dos
 trabalhadores não têm tido capacidade para impor formas de negociação
 sobre estes problemas de transição. Parecem não ter poder para tal e
