--- a/src/app/posts/215.md
+++ b/src/app/posts/215.md
@@ -33,9 +33,9 @@ degradando as condições dos próprios trabalhadores. Em fevereiro de
 2023, a empresa Apeadeiro 2020, que detinha a concessão daquele serviço,
 informou os trabalhadores que os salários não seriam pagos e que a
 empresa teria de apresentar um Plano Especial de Revitalização (PER).
-[Os cerca de 130 trabalhadores assumiram então uma luta que ficou
+Os cerca de 130 trabalhadores assumiram então uma luta que ficou
 conhecida pela acampada nas estações de Santa Apolónia (Lisboa) e de
-Campanhã (Porto)]{.mark}, em março e abril desse ano.
+Campanhã (Porto), em março e abril desse ano.
 
 A Apeadeiro 2020 acabou por pedir insolvência e o serviço foi assumido
 pela NewRail no final de junho de 2023. A empresa, que recebia 410 mil
@@ -87,10 +87,10 @@ Acordo de 2025, por outro impedir que os novos trabalhadores (que era
 necessário contratar devido a um novo serviço na linha Évora-Lisboa),
 fossem assimilados a contrato coletivo das cantinas.
 
-[Nos primeiros dois meses de concessão da ITAU, foi organizada uma greve
+Nos primeiros dois meses de concessão da ITAU, foi organizada uma greve
 de vários dias e várias concentrações, que forçaram a empresa a
 sentar-se à mesa com a Federação dos Sindicatos de Agricultura,
-Alimentação, Bebidas, Hotelaria e Turismo de Portugal (FESAHT).]{.mark}
+Alimentação, Bebidas, Hotelaria e Turismo de Portugal (FESAHT).
 A ITAU alegou que precisava de um período de carência de um ano para
 poder avaliar o impacto financeiro da operação e os lucros auferidos
 pelas vendas diretas a bordo, só podendo iniciar uma negociação com os
@@ -113,8 +113,8 @@ trabalho de mais de uma centena de trabalhadores. A ITAU, por sua vez,
 desresponsabiliza-se por ter assumido a transmissão de estabelecimento
 há menos de um ano e não ter assinado o Acordo de Empresa de 2025.
 
-[É esse modelo de desresponsabilização que a externalização perpetua e
-que tem duas principais vítimas: os trabalhadores e os serviços]{.mark}.
+É esse modelo de desresponsabilização que a externalização perpetua e
+que tem duas principais vítimas: os trabalhadores e os serviços.
 Vemo-lo nos bares da CP como nos serviços de vigilância de várias
 entidades tuteladas pelo Ministério do Trabalho ou inúmeras autarquias,
 onde houve lutas relevantes, como no Porto ou em Almada, para dar apenas
