--- a/src/app/posts/216.md
+++ b/src/app/posts/216.md
@@ -48,10 +48,10 @@ contra os trabalhadores e o Estado Social?
 
 A resistência necessária dos trabalhadores ao que enfrentamos em
 Portugal e por todo o lado, para ser eficaz, não pode ser apenas
-defensiva. [Quem se limita a defender o que existe, acaba a perder mais.
+defensiva. Quem se limita a defender o que existe, acaba a perder mais.
 Exigir mais democracia nos locais de trabalho e a participação dos
 trabalhadores nas decisões e na governação das empresas faz parte da
-aspiração a uma sociedade mais saudável e inclusiva]{.mark}, que
+aspiração a uma sociedade mais saudável e inclusiva, que
 valorize a dignidade do trabalho e não o trate como mercadoria ou
 recurso descartável. Não desistir de abrir caminhos de futuro, de mais
 democracia, de uma outra economia, da redução do tempo de trabalho, de
@@ -79,10 +79,10 @@ empresas, os trabalhadores investem a sua vida e o seu trabalho.
 
 Tal como o contrato social não elimina o conflito mas assegura um chão
 comum para a existência das nossas comunidades políticas e para os
-nossos Estados Sociais, também [o reconhecimento do conflito de
+nossos Estados Sociais, também o reconhecimento do conflito de
 interesses nos locais de trabalho não é incompatível com a negociação
 colectiva, o diálogo social e a exigência da participação dos
-trabalhadores na co-determinação do futuro das empresas]{.mark}.
+trabalhadores na co-determinação do futuro das empresas.
 
 **A democracia não pode ficar à porta dos locais de trabalho.**
 
