--- a/src/app/posts/217.md
+++ b/src/app/posts/217.md
@@ -77,15 +77,15 @@ em que não se dorme[^4], é marcado pelos impactos de um sistema
 económico em que as regras são ditadas pelo mercado e pelo consumo
 desenfreado.
 
-[A [[Iniciativa Legislativa
+A [[Iniciativa Legislativa
 Cidadã]{.underline}](https://participacao.parlamento.pt/initiatives/3185)
 (ILC) "Pelo Encerramento do Comércio aos Domingos e Feriados e Pela
-Redução do Período de Funcionamento até as 22h"]{.mark} , lançada em
+Redução do Período de Funcionamento até as 22h" , lançada em
 2023 e que chegou às 20 000 assinaturas, pelo que foi discutida e votada
 em plenário da Assembleia da República por membros do Sindicato dos
 Trabalhadores do Comércio, Escritórios e Serviços de Portugal (CESP),
-[foi mais uma tentativa de estancar uma tendência que aniquila a
-esperança dos trabalhadores num trabalho digno]{.mark}.
+foi mais uma tentativa de estancar uma tendência que aniquila a
+esperança dos trabalhadores num trabalho digno.
 
 Até 1977, o horário de funcionamento dos estabelecimentos era regido
 pela legislação laboral. Atualmente, o Decreto-Lei n.º 48/96 de 15 de
@@ -153,14 +153,14 @@ possam fazer.
 
 Contudo, o Parlamento voltou a
 [[chumbar]{.underline}](https://sicnoticias.pt/pais/2025-06-26-parlamento-rejeita-encerramento-de-grandes-superficies-aos-domingos-e-feriados-e3dbda55)
-o projeto de encerramento do comércio ao domingo, contrariando o que
+o projeto de encerramento do comércio ao domingo, contrariando o que 
 acontece em outras capitais europeias. O domingo é, em regra, um dia de
 descanso obrigatório, com exceção de atividades e setores que não podem
-ser interrompidos, como o da saúde, da vigilância ou da limpeza. [Ao
+ser interrompidos, como o da saúde, da vigilância ou da limpeza.Ao
 domingo as escolas e os bancos fecham, os estabelecimentos de
 atendimento ao público encerram e toda a vida social e comunitária se
 organiza de forma a permitir a fruição de tempos livres. Contudo, esta é
-uma realidade reservada a cada vez menos trabalhadores...]{.mark}
+uma realidade reservada a cada vez menos trabalhadores...
 
 A produção e consumos ininterruptos e a aspiração de maximização do
 lucro determina que nada possa parar. O individualismo vence. Vai-se
