--- a/src/app/posts/218.md
+++ b/src/app/posts/218.md
@@ -112,10 +112,10 @@ responsável, qual será, aqui, a sua margem de atuação? E o que pode
 invocar o prestador, nesse caso, se as condições do IRCT forem
 desrespeitadas?[^21]
 
-[Apesar das boas intenções do legislador (pois é inegável o propósito
+Apesar das boas intenções do legislador (pois é inegável o propósito
 subjacente a estas normas no sentido de se combater a precariedade e o
-*dumping* social),]{.mark}[^22] [são patentes os problemas do art.
-498.º-A]{.mark}, não só relacionados com a sua interpretação e aplicação
+*dumping* social)[^22] são patentes os problemas do art.
+498.º-A, não só relacionados com a sua interpretação e aplicação
 prática, mas também de índole constitucional. Impõe-se, por conseguinte,
 proceder à sua revisão.
 
