--- a/src/app/posts/4.md
+++ b/src/app/posts/4.md
@@ -225,17 +225,17 @@ idosos regista um aumento de 22% para 33.1% (11,1 pontos percentuais) no
 mesmo período.[^16]
 
 Constata-se que, apesar da idade normal de acesso à pensão de velhice
-ter aumentado, em 2025 será de 66 anos e sete meses, [a idade média de
+ter aumentado, em 2025 será de 66 anos e sete meses, a idade média de
 acesso às pensões de velhice teve tendência decrescente entre 2001 e
-2014, ano em que foi de 62 anos]{.mark}, e está sempre abaixo dos 65
+2014, ano em que foi de 62 anos, e está sempre abaixo dos 65
 anos. Por outro lado, em termos de mercado de trabalho, dá que pensar o
 facto de a duração média da carreira contributiva para o regime geral da
 segurança social ser inferior a 30 anos, apesar de ter vindo a subir
 desde 2002. Em 2022 não chegava aos 29 anos, muito aquém dos 40 anos que
 permite obter o valor máximo da pensão de velhice[^17].
 
-[Variáveis como o desemprego são muito mais relevantes na gestão
-financeira do sistema previdencial do que o envelhecimento]{.mark}, de
+Variáveis como o desemprego são muito mais relevantes na gestão
+financeira do sistema previdencial do que o envelhecimento, de
 modo que soluções fáceis e imediatistas que promovem o aumento das
 receitas do sistema previdencial, via políticas facilitadoras do aumento
 da população ativa através de população imigrante com baixas
