--- a/src/app/posts/48.md
+++ b/src/app/posts/48.md
@@ -15,7 +15,7 @@ jornal](https://www.publico.pt/2025/09/06/opiniao/opiniao/trabalho-seculo-xxi-re
 
 Já os valores que ao Direito do Trabalho cabe promover, esses, não mudaram assim tanto desde a sua génese. No quadro de um sistema capitalista, assente na livre iniciativa económica privada e na prossecução do lucro, compete ao Direito do Trabalho -- enquanto componente essencial de um Estado Social e Democrático -- evitar que o trabalho seja tratado como uma qualquer mercadoria, compete ao Direito do Trabalho promover a equidade numa relação assimétrica e de poder como é, tipicamente, a relação laboral, compete-lhe dignificar o trabalho e salvaguardar os direitos fundamentais de quem trabalha sob a autoridade de outrem, pede-se-lhe que combata sem tréguas a precariedade laboral, que limite e delimite o tempo de trabalho, que assegure a conciliação entre a vida profissional e a vida pessoal e familiar de quem trabalha, que fomente a contratação coletiva e garanta o direito à greve, etc.
 
-É por isso, é precisamente por isso, que o trabalho, no século XXI, não reclama, antes dispensa, muito do que consta do anteprojeto de reforma das leis laborais recentemente apresentado pelo governo. Dispensa normas que permitem generalizar e eternizar a contratação a termo, transformando em regra aquilo que deve ser uma exceção. Dispensa normas que debilitem as garantias de defesa do trabalhador que seja objeto de um procedimento disciplinar, ou normas que retirem ao trabalhador que tenha sido alvo de um despedimento ilegal o direito de, se assim desejar, retomar a sua atividade profissional no seio da empresa da qual foi ilicitamente expulso. Dispensa normas que permitam criar "bancos de horas" -- geridos pelo empregador, qual banqueiro, a expensas do trabalhador, o bancário -- por mero acordo entre os sujeitos do contrato, individuais mas desiguais. Dispensa normas que legitimem a renúncia, por parte do trabalhador, aos seus direitos de crédito, inclusive aos créditos de natureza salarial, abdicando este dos seus direitos, muitos deles conferidos por normas imperativas, em proveito do empregador-devedor. [Dispensa normas que, em nome de duvidosas razões de mercado (maximização do lucro?), legitimem o despedimento coletivo de trabalhadores, todavia necessários à empresa e prontamente substituídos por via do *outsourcing*. D]{.mark}ispensa normas que, a pretexto de dinamizar a contratação coletiva, facilitem a caducidade das convenções coletivas, sem tentar prevenir os vazios normativos daí resultantes; dispensa normas que, de forma enviesada, sugerem a fixação de serviços mínimos na greve, mesmo que aquela concreta greve não ponha em causa a satisfação de necessidades sociais impreteríveis. Dispensa normas que, em lugar de facilitar a prova da existência de relações de trabalho dependente no âmbito das plataformas digitais, constituem um verdadeiro obstáculo à laboralidade neste setor, ao arrepio do preconizado pela União Europeia. Dispensa normas que, em sede de ação de reconhecimento da existência de contrato de trabalho, permitem a implosão de tal ação judicial, instaurada pelo Ministério Público em nome do interesse público de combate aos falsos recibos verdes, por via de uma mera declaração de vontade emitida por um particular que se encontra numa situação de vulnerabilidade extrema. Dispensa normas que retrocedam no combate ao trabalho não declarado. Dispensa normas que, de algum modo, exprimam um recuo na tutela da parentalidade dos trabalhadores (amamentação, horários flexíveis, luto gestacional, etc.). A lista poderia engrossar...
+É por isso, é precisamente por isso, que o trabalho, no século XXI, não reclama, antes dispensa, muito do que consta do anteprojeto de reforma das leis laborais recentemente apresentado pelo governo. Dispensa normas que permitem generalizar e eternizar a contratação a termo, transformando em regra aquilo que deve ser uma exceção. Dispensa normas que debilitem as garantias de defesa do trabalhador que seja objeto de um procedimento disciplinar, ou normas que retirem ao trabalhador que tenha sido alvo de um despedimento ilegal o direito de, se assim desejar, retomar a sua atividade profissional no seio da empresa da qual foi ilicitamente expulso. Dispensa normas que permitam criar "bancos de horas" -- geridos pelo empregador, qual banqueiro, a expensas do trabalhador, o bancário -- por mero acordo entre os sujeitos do contrato, individuais mas desiguais. Dispensa normas que legitimem a renúncia, por parte do trabalhador, aos seus direitos de crédito, inclusive aos créditos de natureza salarial, abdicando este dos seus direitos, muitos deles conferidos por normas imperativas, em proveito do empregador-devedor. Dispensa normas que, em nome de duvidosas razões de mercado (maximização do lucro?), legitimem o despedimento coletivo de trabalhadores, todavia necessários à empresa e prontamente substituídos por via do *outsourcing*. Dispensa normas que, a pretexto de dinamizar a contratação coletiva, facilitem a caducidade das convenções coletivas, sem tentar prevenir os vazios normativos daí resultantes; dispensa normas que, de forma enviesada, sugerem a fixação de serviços mínimos na greve, mesmo que aquela concreta greve não ponha em causa a satisfação de necessidades sociais impreteríveis. Dispensa normas que, em lugar de facilitar a prova da existência de relações de trabalho dependente no âmbito das plataformas digitais, constituem um verdadeiro obstáculo à laboralidade neste setor, ao arrepio do preconizado pela União Europeia. Dispensa normas que, em sede de ação de reconhecimento da existência de contrato de trabalho, permitem a implosão de tal ação judicial, instaurada pelo Ministério Público em nome do interesse público de combate aos falsos recibos verdes, por via de uma mera declaração de vontade emitida por um particular que se encontra numa situação de vulnerabilidade extrema. Dispensa normas que retrocedam no combate ao trabalho não declarado. Dispensa normas que, de algum modo, exprimam um recuo na tutela da parentalidade dos trabalhadores (amamentação, horários flexíveis, luto gestacional, etc.). A lista poderia engrossar...
 
 O Direito do Trabalho tem, realmente, de se modernizar, de se renovar, de se adaptar ao novo. Mas, nesse processo de contínua e dinâmica renovação e reconstrução, o Direito do Trabalho não se deve "empresarializar", não deve renegar o seu código genético, não deve vergar-se perante os alegados ditames do mercado ou genufletir em função das pressões patronais.
 
